address FindBugs "Correctness" issues flagged in module clean up PMD issues flagged in most of the files touched